--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,15 @@
 version: '3.8'
 
-# This compose file is for local development with Docker.
-# It builds the Docker image and runs the container.
+# This compose file is for both local development and production.
+#
+# To run for local development (with hot-reloading):
+# docker-compose up dev
+#
+# To run a production build:
+# docker-compose up prod
+#
 services:
-  web:
-    # Use Node.js 22
+  dev:
     build:
       context: .
       dockerfile: Dockerfile
@@ -22,3 +27,15 @@ services:
     stop_grace_period: 1m
     # Command to run the development server
     command: npm run dev
+
+  prod:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "9002:9002"
+    env_file:
+      - .env.local
+    # In production, we don't mount volumes for source code.
+    # The code is copied into the image during the build process.
+    command: npm run start
