--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      # Use build-time args to pass env vars. This makes them available during `next build`.
-      args:
-        - JULES_API_KEY=${JULES_API_KEY}
-        - GITHUB_TOKEN=${GITHUB_TOKEN}
     ports:
       - "9002:9002"
     # Mount the source code for hot-reloading during development
@@ -26,7 +22,7 @@ services:
       - /app/.next
     # Use an env_file to load environment variables for the container
     env_file:
-      - .env
+      - .env.local
     # Ensure the container stops gracefully
     stop_grace_period: 1m
     # Command to run the development server
@@ -36,14 +32,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      # Use build-time args to pass env vars. This makes them available during `next build`.
-      args:
-        - JULES_API_KEY=${JULES_API_KEY}
-        - GITHUB_TOKEN=${GITHUB_TOKEN}
     ports:
       - "9002:9002"
     env_file:
-      - .env
+      - .env.local
     # In production, we don't mount volumes for source code.
     # The code is copied into the image during the build process.
     command: npm run start
