--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,28 +7,20 @@ version: '3.8'
 # docker-compose up dev
 #
 # To run a production build:
-# 1. Build the image: make build
-# 2. Run the container: docker-compose up prod
+# docker-compose up prod
 #
 services:
   dev:
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports:
       - "9002:9002"
     # Mount the source code for hot-reloading during development
     volumes:
       - ./src:/app/src
-      - ./public:/app/public
       - ./data:/app/data
-      - ./components.json:/app/components.json
-      - ./next.config.ts:/app/next.config.ts
-      - ./package.json:/app/package.json
-      - ./package-lock.json:/app/package-lock.json
-      - ./tsconfig.json:/app/tsconfig.json
-      # Use a named volume for node_modules to persist them
-      - jules_master_node_modules:/app/node_modules
+      - /app/node_modules
     # Use an env_file to load environment variables for the container
     env_file:
       - .env
@@ -38,17 +30,16 @@ services:
     command: npm run dev
 
   prod:
-    # This service assumes you have already built the image
-    # using `make build` or `docker build -t iowoi/jules-master:latest .`
-    image: iowoi/jules-master:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "9123:9002"
+      - "9002:9002"
     volumes:
       - ./data:/app/data
     env_file:
       - .env
-    stop_grace_period: 1m
-
-volumes:
-  jules_master_node_modules:
+    # In production, we don't mount volumes for source code.
+    # The code is copied into the image during the build process.
+    command: npm run start
 
