--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,30 +5,29 @@ on:
     branches: [ "main" ]
 
 env:
-  # 1. Define the image name centrally
   IMAGE_NAME: iowoi/jules-master
 
 jobs:
-  # -----------------------------------------------------------------
-  # JOB 1: BUILD (Parallel Matrix)
-  # Spawns 3 separate runners. Each has 14GB of free space.
-  # -----------------------------------------------------------------
   build:
     name: Build ${{ matrix.platform }}
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.runner }}
     strategy:
       fail-fast: false
       matrix:
-        platform:
-          - linux/amd64
-          - linux/arm64
-          - linux/ppc64le
+        include:
+          - platform: linux/amd64
+            runner: ubuntu-latest
+
+          - platform: linux/arm64
+            runner: ubuntu-24.04-arm
 
     steps:
       - name: Checkout
         uses: actions/checkout@v5
 
+      # Only needed if you are forced to use ubuntu-latest for the ARM build
       - name: Set up QEMU
+        if: ${{ matrix.runner == 'ubuntu-latest' && matrix.platform != 'linux/amd64' }}
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
@@ -40,30 +39,22 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 2. Build and Push by DIGEST
-      # We push the heavy layers now, but we don't tag them "latest" yet.
-      # We identify them by their SHA256 hash to avoid race conditions.
       - name: Build and push by digest
         id: build
         uses: docker/build-push-action@v5
         with:
           context: .
           platforms: ${{ matrix.platform }}
-          # 'push-by-digest=true' is the key here
           outputs: type=image,name=${{ env.IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=true
-          # Scoped caching ensures arm64 cache doesn't break amd64 cache
           cache-from: type=gha,scope=${{ matrix.platform }}
           cache-to: type=gha,mode=max,scope=${{ matrix.platform }}
 
-      # 3. Export Digest to a file
-      # Save the digest (sha256:...) to a text file so the merge job knows what to link.
       - name: Export digest
         run: |
           mkdir -p /tmp/digests
           digest="${{ steps.build.outputs.digest }}"
           touch "/tmp/digests/${digest#sha256:}"
 
-      # 4. Upload Digest as Artifact
       - name: Upload digest
         uses: actions/upload-artifact@v4
         with:
@@ -72,11 +63,6 @@ jobs:
           if-no-files-found: error
           retention-days: 1
 
-  # -----------------------------------------------------------------
-  # JOB 2: MERGE
-  # Runs only after all 3 build jobs succeed.
-  # Downloads the digests and creates the manifest list (the multi-arch tag).
-  # -----------------------------------------------------------------
   merge:
     runs-on: ubuntu-latest
     needs: build
@@ -97,8 +83,6 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 5. Create Manifest List
-      # Connects the AMD, ARM, and PPC blobs under one single tag
       - name: Create manifest list and push
         working-directory: /tmp/digests
         run: |
@@ -108,4 +92,3 @@ jobs:
       - name: Inspect image
         run: |
           docker buildx imagetools inspect ${{ env.IMAGE_NAME }}:latest
-  
