Refactor GitHub Actions workflow for Docker images
Updated workflow to support GitHub Container Registry and adjusted image handling.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,8 @@ on:
     branches: [ "main" ]
 
 env:
-  IMAGE_NAME: iowoi/jules-master
+  DOCKER_IMAGE: iowoi/jules-master
+  GHCR_IMAGE: ghcr.io/${{ github.repository }}
 
 jobs:
   build:
@@ -17,7 +18,6 @@ jobs:
         include:
           - platform: linux/amd64
             runner: ubuntu-latest
-
           - platform: linux/arm64
             runner: ubuntu-24.04-arm
 
@@ -25,7 +25,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
 
-      # Only needed if you are forced to use ubuntu-latest for the ARM build
       - name: Set up QEMU
         if: ${{ matrix.runner == 'ubuntu-latest' && matrix.platform != 'linux/amd64' }}
         uses: docker/setup-qemu-action@v3
@@ -39,14 +38,23 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build and push by digest
         id: build
         uses: docker/build-push-action@v5
         with:
           context: .
           platforms: ${{ matrix.platform }}
-          outputs: type=image,name=${{ env.IMAGE_NAME }},push-by-digest=true,name-canonical=true,push=true
+          # 4. Push to BOTH registries by comma-separating names
+          outputs: type=image,name=${{ env.DOCKER_IMAGE }},${{ env.GHCR_IMAGE }},push-by-digest=true,name-canonical=true,push=true
           cache-from: type=gha,scope=${{ matrix.platform }}
+          # Using mode=min to avoid "No space left" errors
           cache-to: type=gha,mode=min,scope=${{ matrix.platform }}
 
       - name: Export digest
@@ -83,12 +91,27 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      # 5. Create Manifest Lists for Both Registries
       - name: Create manifest list and push
         working-directory: /tmp/digests
         run: |
-          docker buildx imagetools create -t ${{ env.IMAGE_NAME }}:latest \
-            $(printf '${{ env.IMAGE_NAME }}@sha256:%s ' *)
+          # Create/Push manifest for Docker Hub
+          docker buildx imagetools create -t ${{ env.DOCKER_IMAGE }}:latest \
+            $(printf '${{ env.DOCKER_IMAGE }}@sha256:%s ' *)
+
+          # Create/Push manifest for GHCR
+          docker buildx imagetools create -t ${{ env.GHCR_IMAGE }}:latest \
+            $(printf '${{ env.GHCR_IMAGE }}@sha256:%s ' *)
 
       - name: Inspect image
         run: |
-          docker buildx imagetools inspect ${{ env.IMAGE_NAME }}:latest
+          docker buildx imagetools inspect ${{ env.DOCKER_IMAGE }}:latest
+          docker buildx imagetools inspect ${{ env.GHCR_IMAGE }}:latest
+          
