Revert "Add Playwright E2E tests and CI workflow"
This reverts commit 462f76c039909c9ffc838fdf1a5578d3d890eb2e.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 
 # testing
 /coverage
+/test-results/
+/playwright-report/
+/blob-report/
 
 # next.js
 /.next/
@@ -46,7 +49,3 @@ firestore-debug.log
 
 # database
 *.db
-
-# playwright
-playwright-report/
-test-results/
