--- a/.gitignore
+++ b/.gitignore
@@ -27,12 +27,6 @@
 .DS_Store
 *.pem
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
 # vercel
 .vercel
 
@@ -44,8 +38,7 @@ next-env.d.ts
 .env*
 
 # firebase
-firebase-debug.log
-firestore-debug.log
+*.log
 
 # database
 *.db
