--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "@types/react-dom": "^18",
     "@vitest/coverage-v8": "^4.0.15",
     "drizzle-kit": "^0.31.7",
+    "eslint": "9.39.2",
+    "eslint-config-next": "16.0.10",
     "genkit-cli": "^1.20.0",
     "jsdom": "^27.2.0",
     "patch-package": "^8.0.1",
