--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,41 +30,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v5
+        uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v5
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
         with:
-          node-version: '22'
-
-      - name: Install Dependencies
-        run: npm ci
-
-      - name: Run Database Migrations
-        run: npm run db:migrate
-
-      - name: Get installed Playwright version
-        id: playwright-version
-        run: echo "PLAYWRIGHT_VERSION=$(npm list @playwright/test --depth=0 | grep @playwright/test | sed 's/.*@//')" >> $GITHUB_OUTPUT
-
-      - name: Cache playwright binaries
-        uses: actions/cache@v4
-        id: playwright-cache
-        with:
-          path: |
-            ~/.cache/ms-playwright
-          key: ${{ runner.os }}-playwright-${{ steps.playwright-version.outputs.PLAYWRIGHT_VERSION }}
-
-      - name: Install Playwright Browsers
-        if: steps.playwright-cache.outputs.cache-hit != 'true'
-        run: npx playwright install --with-deps
-
-      - name: Install Playwright deps
-        if: steps.playwright-cache.outputs.cache-hit == 'true'
-        run: npx playwright install-deps
+          context: .
+          file: Dockerfile.test
+          push: false
+          load: true
+          tags: jules-test:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Run E2E Tests
-        run: npm test
+        run: docker run --rm jules-test:latest npm run test:e2e
 
       - uses: actions/upload-artifact@v4
         if: always()
