--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -4,6 +4,7 @@ WORKDIR /app
 
 ENV CI=true
 ENV JULES_API_KEY=mock-api-key
+ENV NODE_OPTIONS="--max-old-space-size=4096"
 
 # Copy package files
 COPY package.json package-lock.json ./
