--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run db:migrate && next dev --turbopack -p 9002",
+    "dev": "npm run db:migrate && next dev -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "NODE_ENV=production next build",
@@ -19,6 +19,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@bufbuild/protobuf": "^2.10.2",
     "@genkit-ai/google-genai": "^1.20.0",
     "@genkit-ai/next": "^1.20.0",
     "@hookform/resolvers": "^4.1.3",
@@ -57,6 +58,8 @@
     "lucide-react": "^0.475.0",
     "next": "^15.5.9",
     "next-themes": "^0.3.0",
+    "nice-grpc": "^2.1.14",
+    "nice-grpc-common": "^2.0.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -88,9 +91,18 @@
     "patch-package": "^8.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-proto": "^2.10.1",
     "typescript": "^5.9.3",
     "vite": "^7.2.6",
     "vitest": "^4.0.15",
     "vitest-fetch-mock": "^0.4.5"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "protobufjs",
+      "sharp",
+      "unrs-resolver"
+    ]
   }
 }
