--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: '22'
+          node-version: '24'
 
       - name: Install Dependencies
         run: npm ci
@@ -71,28 +71,42 @@ jobs:
           path: playwright-report/
           retention-days: 30
 
-  # docker_smoke_test:
-  #   timeout-minutes: 20
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v6
-  #
-  #     - name: Setup Bazel
-  #       uses: bazelbuild/setup-bazelisk@v3
-  #
-  #     - name: Mount bazel cache
-  #       uses: actions/cache@v5
-  #       with:
-  #         path: "~/.cache/bazel"
-  #         key: bazel-build-${{ runner.os }}-${{ hashFiles('**/MODULE.bazel') }}
-  #         restore-keys: bazel-build-${{ runner.os }}-
-  #
-  #     - name: Build Docker image with Bazel
-  #       run: bazel run //:image_load
-  #
-  #     - name: Run container and smoke test
-  #       run: |
-  #         docker run -d -p 9002:9002 --name nextn-container jules:bazel
-  #         sleep 10
-  #         curl -f http://localhost:9002
+  docker_smoke_test:
+    timeout-minutes: 20
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v6
+
+      - name: Setup Bazel
+        uses: bazelbuild/setup-bazelisk@v3
+
+      - name: Mount bazel cache
+        uses: actions/cache@v5
+        with:
+          path: "~/.cache/bazel"
+          key: bazel-build-${{ runner.os }}-${{ hashFiles('**/MODULE.bazel') }}
+          restore-keys: bazel-build-${{ runner.os }}-
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: .nvmrc
+          cache: npm
+
+      - name: Install dependencies (npm ci)
+        run: npm ci
+
+      - name: Create tarballs for Bazel inputs
+        run: |
+          tar -cf node_modules.tar node_modules
+          tar -cf src.tar src
+
+      - name: Build Docker image with Bazel
+        run: bazel run //:image_load
+
+      - name: Run container and smoke test
+        run: |
+          docker run -d -p 9002:9002 --name nextn-container jules:bazel
+          sleep 10
+          curl -f http://localhost:9002
