--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@genkit-ai/google-genai": "^1.20.0",
     "@genkit-ai/next": "^1.20.0",
+    "@grpc/grpc-js": "^1.14.3",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -88,6 +89,7 @@
     "patch-package": "^8.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-proto": "^2.11.0",
     "typescript": "^5.9.3",
     "vite": "^7.2.6",
     "vitest": "^4.0.15",
