--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "tsx src/lib/db/migrate.ts",
     "test": "npm run test:unit && npm run test:e2e",
-    "test:unit": "vitest",
-    "unit": "vitest",
+    "test:unit": "vitest run",
+    "unit": "vitest run",
     "test:e2e": "playwright test",
     "postinstall": "patch-package"
   },
