--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -23,6 +23,6 @@
       "@/proto/*": ["../proto/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "../proto/**/*.ts"],
   "exclude": ["node_modules"]
 }
