--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -1,5 +1,12 @@
 FROM mcr.microsoft.com/playwright:v1.57.0-noble
 
+# Install Go
+RUN apt-get update && apt-get install -y wget && \
+    wget https://go.dev/dl/go1.24.0.linux-amd64.tar.gz && \
+    tar -C /usr/local -xzf go1.24.0.linux-amd64.tar.gz && \
+    rm go1.24.0.linux-amd64.tar.gz
+ENV PATH="/usr/local/go/bin:${PATH}"
+
 WORKDIR /app
 
 ENV CI=true
@@ -7,14 +14,16 @@ ENV JULES_API_KEY=mock-api-key
 ENV NODE_OPTIONS="--max-old-space-size=4096"
 
 # Copy package files
-COPY ui/package.json ui/package-lock.json ./
+COPY ui/package.json ./
 
 # Install dependencies
-RUN npm ci
+RUN npm install
+RUN ln -s /app/node_modules /node_modules
 
 # Copy source code
 COPY ui/ .
 COPY proto/ /proto/
+COPY server/ /server/
 
 # Run E2E tests
 CMD ["npm", "run", "test:e2e"]
