--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -14,10 +14,10 @@ ENV JULES_API_KEY=mock-api-key
 ENV NODE_OPTIONS="--max-old-space-size=4096"
 
 # Copy package files
-COPY ui/package.json ./
+COPY ui/package.json ui/package-lock.json ./
 
 # Install dependencies
-RUN npm install
+RUN npm ci
 RUN ln -s /app/node_modules /node_modules
 
 # Copy source code
