--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,7 @@ jobs:
           load: true
           tags: jules-test:latest
           cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Run E2E Tests
         run: docker run --rm jules-test:latest npm run test:e2e
@@ -78,13 +79,24 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v6
 
-      - name: Build Docker image
-        run: docker build -t nextn-app .
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and load Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./Dockerfile
+          push: false
+          load: true
+          tags: nextn-app:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Run container and smoke test
         run: |
           # Run container with random port mapping
-          CONTAINER_ID=$(docker run -d -p 0:9002 --name nextn-container nextn-app)
+          CONTAINER_ID=$(docker run -d -p 0:9002 --name nextn-container nextn-app:latest)
           sleep 10
           # Get the assigned port
           HOST_PORT=$(docker port $CONTAINER_ID 9002 | cut -d ':' -f 2)
