--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/playwright:v1.57.0-noble
 
 # Install Go
-RUN apt-get update && apt-get install -y wget && \
+RUN apt-get update && apt-get install -y wget build-essential && \
     wget https://go.dev/dl/go1.24.0.linux-amd64.tar.gz && \
     tar -C /usr/local -xzf go1.24.0.linux-amd64.tar.gz && \
     rm go1.24.0.linux-amd64.tar.gz
@@ -26,7 +26,7 @@ COPY proto/ /proto/
 COPY server/ /server/
 
 # Pre-build backend
-RUN cd /server && go mod download && go build -o /app/server_bin cmd/server/main.go
+RUN cd /server && go mod download && CGO_ENABLED=1 go build -o /app/server_bin cmd/server/main.go
 
 # Run E2E tests
 CMD ["npm", "run", "test:e2e"]
