--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,8 +60,8 @@ jobs:
           push: false
           load: true
           tags: nextn-app:latest
-          cache-from: type=gha,scope=prod
-          cache-to: type=gha,mode=min,scope=prod
+          cache-from: type=gha,scope=prod-retry
+          cache-to: type=gha,mode=min,scope=prod-retry
 
       # Build Test Runner Image (reusing Dockerfile.test)
       - name: Build Test Runner Image
@@ -72,8 +72,8 @@ jobs:
           push: false
           load: true
           tags: jules-test:latest
-          cache-from: type=gha,scope=test
-          cache-to: type=gha,mode=min,scope=test
+          cache-from: type=gha,scope=test-retry
+          cache-to: type=gha,mode=min,scope=test-retry
 
       # Start Production App with Shared Volume
       - name: Start Production App
