--- a/.github/workflows/bot-hourly.yml
+++ b/.github/workflows/bot-hourly.yml
@@ -5,7 +5,7 @@ name: Manage PRs (Merge & Cleanup)
 
 on:
   schedule:
-    - cron: '*/10 * * * *' # Runs every 10 minutes
+    - cron: "*/10 * * * *" # Runs every 10 minutes
   workflow_dispatch: # Allows manual triggering
 
 jobs:
@@ -86,9 +86,7 @@ jobs:
           gh pr list \
             --repo ${{ github.repository }} \
             --base main \
-            --sort updated \
-            --order desc \
-            --search "is:pr is:open author:@me" \
+            --search "is:pr is:open author:@me sort:updated-desc" \
             --json number \
             --jq '.[].number' | \
           while read pr_number; do
