--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,13 +39,17 @@ jobs:
         with:
           node-version: "24"
 
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 10
+
       - name: Install Dependencies
         working-directory: ./ui
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Run Unit Tests
         working-directory: ./ui
-        run: npm run test:unit
+        run: pnpm run test:unit
 
   e2e:
     timeout-minutes: 20
@@ -120,7 +124,7 @@ jobs:
             -e MOCK_API=true \
             -e JULES_API_KEY=mock-api-key \
             jules-test:latest \
-            npm run test:e2e
+            pnpm run test:e2e
 
       - uses: actions/upload-artifact@v4
         if: always()
