--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -21,7 +21,7 @@ COPY ui/package.json ui/pnpm-lock.yaml ./
 # Install dependencies
 RUN pnpm install --frozen-lockfile
 # Rebuild native modules to ensure they match the container environment
-RUN pnpm rebuild
+RUN npm rebuild better-sqlite3 --build-from-source
 RUN ln -s /app/node_modules /node_modules
 
 # Copy source code
