fix: force rebuild better-sqlite3 with npm
- Explicitly run `npm rebuild better-sqlite3 --build-from-source` in `ui/Dockerfile.test`.
- This ensures the native bindings are generated even if `npm install` skips them or uses incompatible prebuilds.
- This works in conjunction with the installed build tools (python3, make, g++) and the switch to `npm` for the test container.

--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -17,6 +17,8 @@ COPY ui/package.json ./
 
 # Install dependencies
 RUN npm install
+# Force rebuild of better-sqlite3 to ensure binding exists
+RUN npm rebuild better-sqlite3 --build-from-source
 RUN ln -s /app/node_modules /node_modules
 
 # Copy source code
