--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/playwright:v1.57.0-noble
 
 # Install Go
-RUN apt-get update && apt-get install -y wget build-essential python3 python-is-python3 make g++ && \
+RUN apt-get update && apt-get install -y wget build-essential python3 python-is-python3 python3-distutils make g++ && \
     wget https://go.dev/dl/go1.24.0.linux-amd64.tar.gz && \
     tar -C /usr/local -xzf go1.24.0.linux-amd64.tar.gz && \
     rm go1.24.0.linux-amd64.tar.gz
@@ -16,9 +16,11 @@ ENV NODE_OPTIONS="--max-old-space-size=4096"
 COPY ui/package.json ./
 
 # Install dependencies
-RUN npm install
+RUN npm install --unsafe-perm
 # Force rebuild of better-sqlite3 to ensure binding exists
-RUN npm rebuild better-sqlite3 --build-from-source
+RUN npm rebuild better-sqlite3 --build-from-source --unsafe-perm
+# List the build directory to verify existence in build logs
+RUN ls -R node_modules/better-sqlite3/build || true
 RUN ln -s /app/node_modules /node_modules
 
 # Copy source code
