fix: use npm install with build-from-source flag
- Consolidate installation and build by using `npm install --unsafe-perm --build-from-source=better-sqlite3`.
- This removes the separate `npm rebuild` step which was causing build failures, and lets `npm` handle the build process during installation.
- Ensures native bindings for `better-sqlite3` are correctly generated for the Docker environment.

--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -15,12 +15,8 @@ ENV NODE_OPTIONS="--max-old-space-size=4096"
 # Copy package files
 COPY ui/package.json ./
 
-# Install dependencies
-RUN npm install --unsafe-perm
-# Force rebuild of better-sqlite3 to ensure binding exists
-RUN npm rebuild better-sqlite3 --build-from-source --unsafe-perm
-# List the build directory to verify existence in build logs
-RUN ls -R node_modules/better-sqlite3/build || true
+# Install dependencies with explicit build from source for better-sqlite3
+RUN npm install --unsafe-perm --build-from-source=better-sqlite3
 RUN ln -s /app/node_modules /node_modules
 
 # Copy source code
