fix: use pnpm with build env vars for native modules
- Revert to `pnpm` in `ui/Dockerfile.test` and CI to match project standards.
- Add `ENV npm_config_build_from_source=true` and `ENV PYTHON=/usr/bin/python3` to force native module compilation.
- This leverages the installed build tools to correctly build `better-sqlite3` during `pnpm install`, avoiding issues with missing prebuilds or npm structure.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,7 +124,7 @@ jobs:
             -e MOCK_API=true \
             -e JULES_API_KEY=mock-api-key \
             jules-test:latest \
-            npm run test:e2e
+            pnpm run test:e2e
 
       - uses: actions/upload-artifact@v4
         if: always()
