--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -11,12 +11,18 @@ WORKDIR /app
 
 ENV CI=true
 ENV NODE_OPTIONS="--max-old-space-size=4096"
+# Force build from source and specify python
+ENV npm_config_build_from_source=true
+ENV PYTHON=/usr/bin/python3
+
+# Install pnpm
+RUN npm install -g pnpm
 
 # Copy package files
-COPY ui/package.json ./
+COPY ui/package.json ui/pnpm-lock.yaml ./
 
-# Install dependencies with explicit build from source for better-sqlite3
-RUN npm install --unsafe-perm --build-from-source=better-sqlite3
+# Install dependencies
+RUN pnpm install --frozen-lockfile
 RUN ln -s /app/node_modules /node_modules
 
 # Copy source code
@@ -28,4 +34,4 @@ COPY server/ /server/
 RUN cd /server && go mod download && CGO_ENABLED=1 go build -o /app/server_bin cmd/server/main.go
 
 # Run E2E tests
-CMD ["npm", "run", "test:e2e"]
+CMD ["pnpm", "run", "test:e2e"]
