--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -1,7 +1,7 @@
-FROM mcr.microsoft.com/playwright:v1.57.0-noble
+FROM mcr.microsoft.com/playwright:v1.57.0-jammy
 
 # Install Go
-RUN apt-get update && apt-get install -y wget build-essential python3 python-is-python3 python3-distutils python3-dev python3-setuptools make g++ && \
+RUN apt-get update && apt-get install -y wget build-essential python3 python-is-python3 make g++ && \
     wget https://go.dev/dl/go1.24.0.linux-amd64.tar.gz && \
     tar -C /usr/local -xzf go1.24.0.linux-amd64.tar.gz && \
     rm go1.24.0.linux-amd64.tar.gz
@@ -11,15 +11,11 @@ WORKDIR /app
 
 ENV CI=true
 ENV NODE_OPTIONS="--max-old-space-size=4096"
-# Force build from source and specify python
-ENV npm_config_build_from_source=true
-ENV PYTHON=/usr/bin/python3
 
 # Copy package files
 COPY ui/package.json ./
 
 # Install dependencies
-RUN npm install -g node-gyp
 RUN npm install --unsafe-perm --build-from-source=better-sqlite3
 RUN ln -s /app/node_modules /node_modules
 
