Fix CI: Use pnpm rebuild for better-sqlite3
The `npm rebuild` command was failing with an `EEXIST` error in the Docker build. Switching to `pnpm rebuild` ensures compatibility with the package manager used.

Changes:
- Updated `ui/Dockerfile.test` to use `pnpm rebuild better-sqlite3` instead of `npm rebuild`.

--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -22,7 +22,7 @@ COPY ui/package.json ui/pnpm-lock.yaml ./
 RUN pnpm install --frozen-lockfile
 
 # Rebuild better-sqlite3 to ensure bindings match the container environment
-RUN npm rebuild better-sqlite3 --build-from-source
+RUN pnpm rebuild better-sqlite3
 
 # Copy source code
 COPY ui/ .
