Fix CI: Allow build scripts in pnpm
The `e2e` build failed because `pnpm` was ignoring build scripts for `better-sqlite3`, causing missing native bindings.

Changes:
- Added `pnpm.onlyBuiltDependencies` to `ui/package.json` to allow `better-sqlite3` and other necessary packages to run their build scripts.
- Removed explicit rebuild step from `ui/Dockerfile.test`.

--- a/ui/package.json
+++ b/ui/package.json
@@ -95,5 +95,13 @@
     "vite": "^7.2.6",
     "vitest": "^4.0.15",
     "vitest-fetch-mock": "^0.4.5"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "better-sqlite3",
+      "esbuild",
+      "protobufjs",
+      "sharp"
+    ]
   }
 }
