Fix CI: Force pnpm rebuild for better-sqlite3
Despite enabling build scripts, the runtime was still failing to locate bindings.
Adding an explicit `pnpm rebuild better-sqlite3` step ensures the native module is correctly compiled and linked in the container.

Changes:
- Added `RUN pnpm rebuild better-sqlite3` to `ui/Dockerfile.test`.

--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -21,6 +21,9 @@ COPY ui/package.json ui/pnpm-lock.yaml ./
 # Install dependencies
 RUN pnpm install --frozen-lockfile
 
+# Force rebuild better-sqlite3 to ensure bindings match the container environment
+RUN pnpm rebuild better-sqlite3
+
 # Copy source code
 COPY ui/ .
 # Proto and Server are copied from root context
