Fix CI: Use hoisted linker for pnpm
The `better-sqlite3` native bindings were failing to load due to `pnpm`'s default symlinked structure.
Using `node-linker=hoisted` flattens the `node_modules` (similar to npm), resolving the path resolution issues for the native module.

Changes:
- Added `RUN echo "node-linker=hoisted" > .npmrc` to `ui/Dockerfile.test`.

--- a/ui/Dockerfile.test
+++ b/ui/Dockerfile.test
@@ -18,6 +18,9 @@ ENV NODE_OPTIONS="--max-old-space-size=4096"
 # Copy package files
 COPY ui/package.json ui/pnpm-lock.yaml ./
 
+# Use hoisted linker to avoid symlink issues with better-sqlite3 bindings
+RUN echo "node-linker=hoisted" > .npmrc
+
 # Install dependencies (force build from source for better-sqlite3 to ensure compatibility)
 RUN pnpm install --frozen-lockfile --config.build-from-source=better-sqlite3
 
